<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceFragment">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Switch
            android:id="@+id/switchHappiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/happiness_txt"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="371dp" />

        <Switch
            android:id="@+id/switchOptimism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/optimism_txt"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="371dp" />

        <Switch
            android:id="@+id/switchKindness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/kindness_txt"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="371dp" />

        <Switch
            android:id="@+id/switchGiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/giving_txt"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="434dp" />

        <Switch
            android:id="@+id/switchRespect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/respect_txt"
            tools:layout_editor_absoluteX="189dp"
            tools:layout_editor_absoluteY="434dp" />

        <Switch
            android:id="@+id/switcEgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/ego_txt"
            tools:layout_editor_absoluteX="348dp"
            tools:layout_editor_absoluteY="434dp" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>